Fixed App Name & Info Page
App name was alco_tracer_app, fixed to be AlcoTracer. Info page started at the bottom when going into it, changed it to be at the top.

--- a/alco_tracer_app/android/app/src/main/AndroidManifest.xml
+++ b/alco_tracer_app/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.cpp.CS4750.alcotracer.alco_tracer_app">
    <application
-        android:label="alco_tracer_app"
+        android:label="AlcoTracer"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
